service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: blue-svc-hello-world-nginx
  labels: 
    app: hello-world-nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: hello-world-nginx
    version: "v1"
  type:  ClusterIP
  # type:  LoadBalancer
---
apiVersion: v1
kind: Service
metadata: 
  name: green-svc-hello-world-nginx
  labels: 
    app: hello-world-nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: hello-world-nginx
    version: "v2"
  type:  ClusterIP
  # type:  LoadBalancer
---
apiVersion: v1
kind: Service
metadata: 
  name: svc-hello-world-nginx
  labels: 
    app: hello-world-nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector: 
    app: hello-world-nginx
    version: "v1"
  # type:  ClusterIP
  type:  LoadBalancer
