switch-to-green-ingress-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-world.52-226-247-98.nip.io # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-svc-hello-world-nginx
            port:
              number: 80
  - host: dev-hello-world.52-226-247-98.nip.io # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-svc-hello-world-nginx
            port:
              number: 80
